fixed filter_contrast to actually use contrast

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -13,6 +13,6 @@
     filter: saturate(2);
   }
   &contrast {
-    filter: grayscale(2);
+    filter: contrast(2);
   }
 }
